Fixed pom definition